--- a/index.html
+++ b/index.html
@@ -67,5 +67,9 @@
     </ul>
   </div>
 
+  
+  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <script src="js/app.js"></script>
+  
 </body>
 </html>
